# ft_printf

./: CMakeLists.txt  Makefile  ft_char_output.c  ft_checkers.c  ft_hexadecimal_output.c  ft_hexadecimal_output_X.c  ft_int_output.c  ft_itoa.c  ft_outputs.c  ft_percent_output.c  ft_pointer_output.c  ft_printf.c  ft_printf.h  ft_putstr.c  ft_string_output.c  ft_unsigned_decimal_output.c  initilize_flags.c  main.c  print_width.c
includes/: ft_printf.h  ft_printf.h.gch
sources/: ft_char_output.c  ft_checkers.c  ft_hexadecimal_output.c  ft_hexadecimal_output_X.c  ft_int_output.c  ft_itoa.c  ft_percent_output.c  ft_pointer_output.c  ft_putstr.c  ft_string_output.c  ft_unsigned_decimal_output.c
